fix bug with too much space in zoom container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ img {
 #zoom {
     height: 50px;
     text-align: center;  
-    overflow-x: hidden;
+
 
 }
 
